--- a/src/sass/das-design-system.scss
+++ b/src/sass/das-design-system.scss
@@ -1,3 +1,420 @@
-@import "main";
-@import "design-system/main";
+@import 'main';
+@import 'design-system/main';
 
+// some colours used below
+$manual-search-button-colour: #0b0c0c;
+$manual-search-button-border-colour: #222;
+
+main {
+  display: block;
+}
+
+.manuals-frontend-body {
+  padding-bottom: $gutter;
+
+  header {
+    background: $govuk-blue;
+
+    &.hmrc {
+      background: $hm-revenue-customs;
+    }
+
+    padding: $gutter;
+    color: $white;
+    margin: 0;
+    @include core-16;
+    @extend %contain-floats;
+
+    @include media(mobile) {
+      padding: $gutter $gutter-half;
+    }
+
+    @include media(tablet) {
+      .primary,
+      .secondary {
+        float: left;
+      }
+
+      .primary {
+        width: $two-thirds;
+      }
+
+      .secondary {
+        width: $one-third;
+
+        .secondary-inner {
+          padding-left: $gutter;
+        }
+      }
+    }
+
+    .manual-type {
+      @include heading-24;
+    }
+
+    h1 {
+      @include core-36;
+      font-weight: bold;
+      padding: 0 0 $gutter-half 0;
+
+      @include media(tablet) {
+        padding: 0 0 $gutter 0;
+      }
+    }
+
+    a {
+      color: $white;
+    }
+
+    .in-manual-search {
+      position: relative;
+      margin: $gutter 0 $gutter-half;
+
+      label {
+        padding-bottom: 5px;
+        display: inline-block;
+      }
+
+      .in-manual-search-box {
+        // Disable scss-lint complaining about declaring width twice since
+        // this is for browsers that don't understand calc
+        // scss-lint:disable DuplicateProperty
+        width: 86%;
+        width: calc(100% - 47px);
+        // scss-lint:enable DuplicateProperty
+        border: none;
+        padding: 7px;
+        height: 20px;
+
+        &.focus,
+        &:focus {
+          position: relative;
+          z-index: 1;
+        }
+
+        @include media(mobile) {
+          padding: 9px 7px;
+          height: 16px;
+        }
+      }
+
+      button {
+        width: 34px;
+        height: 34px;
+        border: 1px solid $manual-search-button-colour;
+        border-width: 0 0 0 1px;
+        border-left-color: $manual-search-button-border-colour;
+        overflow: hidden;
+        text-indent: -5000px;
+        cursor: pointer;
+        color: $white;
+        background: $manual-search-button-colour image-url('search-button.png')
+          no-repeat 0 50%;
+        position: absolute;
+
+        @include border-radius(0);
+        @include device-pixel-ratio() {
+          background-size: 52.5px 35px;
+          background-position: 100% 50%;
+        }
+      }
+    }
+  }
+
+  .breadcrumb-trail {
+    @include core-16;
+    margin: 10px 0 0 0;
+    padding: 0 0 10px;
+    border-bottom: 1px solid $border-colour;
+
+    strong {
+      font-weight: bold;
+    }
+
+    li {
+      background-image: image-url('separator.png');
+      background-position: 100% 20%;
+      background-repeat: no-repeat;
+      display: inline;
+      list-style: none;
+      margin-left: 0;
+      margin-right: 5px;
+      padding: 0 15px 0 0;
+
+      @include media(tablet) {
+        background-position: 100% 45%;
+      }
+
+      @include device-pixel-ratio() {
+        background-image: image-url('separator-2x.png');
+        background-size: 6px 11px;
+      }
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &.last-child {
+        background-image: none;
+        color: $text-colour;
+      }
+
+      &.no-separator {
+        background-image: none;
+      }
+
+      a {
+        color: $text-colour;
+      }
+    }
+  }
+
+  .section-list {
+    margin-top: $gutter;
+
+    @include media(tablet) {
+      margin-top: $gutter * 2;
+    }
+
+    li {
+      @include core-19;
+      list-style: none;
+      cursor: pointer;
+      border-top: 1px solid $border-colour;
+
+      &:hover {
+        background-color: $grey-4;
+      }
+
+      &:last-child {
+        border-bottom: 1px solid $border-colour;
+      }
+
+      a {
+        text-decoration: none;
+        display: block;
+        padding: $gutter-one-third $gutter-one-third $gutter-one-third 0;
+
+        @include media(tablet) {
+          padding-right: $one-third;
+        }
+
+        .subsection-title-text {
+          color: $link-colour;
+          font-weight: bold;
+          display: block;
+        }
+
+        .subsection-summary {
+          color: $text-colour;
+          display: block;
+        }
+      }
+    }
+  }
+
+  .manual-body {
+    margin: $gutter-half 0 $gutter * 3;
+
+    @include media(tablet) {
+      margin-top: $gutter;
+    }
+
+    .section-title {
+      @include heading-24;
+      font-weight: bold;
+    }
+
+    .summary {
+      @include core-24;
+      margin-bottom: $gutter-half;
+
+      @include media(tablet) {
+        max-width: $two-thirds;
+        margin-bottom: $gutter;
+      }
+    }
+
+    .body-content-wrapper {
+      @include media(tablet) {
+        width: $two-thirds;
+      }
+    }
+
+    .footnotes {
+      border-top: 0;
+      padding-top: 0;
+    }
+  }
+
+  .updates-list {
+    @include core-19;
+    dd {
+      margin-bottom: 1em;
+    }
+  }
+
+  .collapsible-subsections {
+    @include media(tablet) {
+      .call-to-action p {
+        margin: 0;
+      }
+    }
+  }
+
+  .collapsible-subsections .js-subsection-title {
+    @include bold-19;
+    display: block;
+    border-top: 1px solid $border-colour;
+    padding: $gutter-one-third $gutter $gutter-one-third 0;
+    margin: $gutter 0;
+    position: relative;
+
+    a {
+      text-decoration: none;
+    }
+  }
+
+  .subsection-collection {
+    margin-top: $gutter-half;
+
+    @include media(tablet) {
+      margin-top: $gutter;
+    }
+
+    .js-title-controls-wrap {
+      @extend %contain-floats;
+
+      .section-title {
+        @include heading-24;
+        @include media(tablet) {
+          float: left;
+          width: $three-quarters;
+        }
+      }
+
+      .js-collection-controls {
+        display: block;
+        margin-left: -5px;
+        margin-bottom: $gutter-half;
+
+        @include media(tablet) {
+          margin: 0 0 $gutter -5px;
+          float: right;
+          display: inline-block;
+        }
+
+        a {
+          @include core-16;
+          padding: 0 5px 0 5px;
+          display: inline-block;
+
+          // We're nesting quite deep here...
+          // scss-lint:disable NestingDepth
+          &.disabled {
+            color: $secondary-text-colour;
+            text-decoration: none;
+            cursor: default;
+          }
+          // scss-lint:enable NestingDepth
+        }
+      }
+    }
+  }
+
+  .js-openable {
+    border-top: 1px solid $border-colour;
+    padding-bottom: $gutter;
+
+    @include media(tablet) {
+      padding-bottom: $gutter * 2;
+    }
+
+    .js-subsection-title {
+      cursor: pointer;
+      margin: 0;
+      border: none;
+
+      @include ie-lte(7) {
+        zoom: 1;
+      }
+
+      .js-toggle {
+        height: 25px;
+        width: 25px;
+        display: block;
+        background: image-url('arrows_sprite.png') no-repeat;
+        position: absolute;
+        right: 0;
+        top: $gutter-one-third;
+
+        @include device-pixel-ratio() {
+          background-image: image-url('arrows_sprite-2x.png');
+          background-size: 32px 50px;
+        }
+      }
+    }
+
+    .js-subsection-body {
+      margin-top: $gutter-half;
+
+      @include media(tablet) {
+        margin-top: $gutter;
+      }
+    }
+
+    .js-enabled &.closed {
+      padding: 0;
+
+      .js-toggle {
+        background: image-url('arrows_sprite.png') no-repeat 0 -32px;
+
+        @include device-pixel-ratio() {
+          background-image: image-url('arrows_sprite-2x.png');
+          background-size: 32px 50px;
+        }
+      }
+
+      .js-subsection-body {
+        position: absolute;
+        left: -9999px;
+        width: 100px;
+        height: 1px;
+        overflow: hidden;
+      }
+    }
+  }
+
+  .hmrc.section-list {
+    margin-top: $gutter;
+    padding-bottom: $gutter;
+
+    a {
+      padding-right: 0;
+    }
+
+    @include media(tablet) {
+      .title-wrap {
+        display: table-row;
+
+        div {
+          display: table-cell;
+        }
+      }
+    }
+  }
+
+  .subsection-id {
+    min-width: 135px;
+    color: $secondary-text-colour;
+    padding-right: $gutter-half;
+  }
+
+  .print-page {
+    display: none;
+
+    .js-enabled & {
+      display: block;
+    }
+  }
+}
