Remove now, update index

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,10 +72,10 @@
 
       <div class="gem-c-govspeak govuk-govspeak ">
         <div role="note" aria-label="Information" class="application-notice info-notice">
-          <p>Apprenticeship funding rules for employers August 2018 to July 2019</p>
+          <p>Guidance for all employers participating in the new apprenticeship programme from 1 August 2018</p>
         </div>
 
-        <p>Apprenticeship funding rules for employers August 2018 to July 2019. Apprenticeship funding rules for employers August 2018 to July 2019.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus debitis rem dolores harum laboriosam! Nesciunt dolorum saepe nam, a quis illo, obcaecati voluptatibus repellat quibusdam nihil dolor. At, blanditiis eveniet.</p>
       </div>
 
       <ol class="section-list">
