Changes for round-2 of UR

--- a/app/views/prototypes/round-1/guidance/introduction.html
+++ b/app/views/prototypes/round-1/guidance/introduction.html
@@ -62,7 +62,7 @@ GOV.UK Manual
   </header>
 
   <ol class="breadcrumb-trail">
-    <li><a href="/">Contents</a></li>
+    <li><a href="../index.html">Contents</a></li>
 
     <li class="last-child">Introduction and purpose of the document</li>
   </ol>
