--- a/app/views/prototypes/round-2/search-results/results.html
+++ b/app/views/prototypes/round-2/search-results/results.html
@@ -35,22 +35,22 @@ GOV.UK Manual
                 <div class="result-count  scoped-result-count " id="js-live-search-result-count" aria-hidden="true">
                     <strong>3 results found in</strong><br>
                     Funding rules for employers<br>
-                    <a href="/search?q=test">Display 375 results from all of GOV.UK</a>
+                    <a href="#">Display 375 results from all of GOV.UK</a>
                 </div>
 
                 <ol class="results-list" id="js-live-search-results" start="1" data-search-query="test"
                     data-analytics-ecommerce="" data-ecommerce-start-index="1">
                     <li>
-                        <h3><a href="#">Employers and apprenticeships: things to check</a></h3>
+                        <h3><a href="../guidance/things-to-check">Employers and apprenticeships: things to check</a></h3>
                         <p>This document is a combination of rules and guidance in order to help you manage your
                             apprenticeship in partnership with your chosen main provider.</p>
                     </li>
                     <li>
-                        <h3><a href="#">Who can be funded</a></h3>
+                        <h3><a href="../guidance/who-can-be-funded">Who can be funded</a></h3>
                         <p>Who can be funded description</p>
                     </li>
                     <li>
-                        <h3><a href="#">Glossary</a></h3>
+                        <h3><a href="../guidance/glossary">Glossary</a></h3>
                         <p>Glossary description</p>
                     </li>
                 </ol>
