--- a/app/views/prototypes/round-2/index.html
+++ b/app/views/prototypes/round-2/index.html
@@ -2,7 +2,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  GOV.UK Manual
+  GOV.UK Funding Rules For Employers
 {% endblock %}
 
 {% block content %}
