fixed missing left margin on lists, content on index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,22 +6,15 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">Employer Funding Rules</h1>
-      <h2 class="govuk-heading-l"> User Research Prototype</h2>
-
-      <h3 class="govuk-heading-m">Round 1</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/prototypes/round-1/index">Journey</a></li>
-      </ul>
-
-      <h3 class="govuk-heading-m">Round 2</h3>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="/prototypes/round-2/index">Journey</a></li>
-      </ul>
-
-    </div>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-l">User Centred Funding Rules Prototype</h1>
+    <h3 class="govuk-heading-m">Versions</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li><a href="/prototypes/round-2/index">v 2-0 - Employer Funding Rules</a> (user tested: date?)</li>
+      <li><a href="/prototypes/round-1/index">v 1-0 - Employer Funding Rules</a> (user tested: date?)</li>
+    </ul>
+  </div>
 </div>
 
 {% endblock %}
