--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -70,6 +70,9 @@ h1,h2,h3,h4,h5,h6,p,blockquote,pre,small,strike,sub,sup,tt,var,b,u,i,center,inpu
   margin-top: 15px;
   margin-bottom: 15px
 }
+.gem-c-govspeak ol,.gem-c-govspeak ul {
+  padding-left: 20px
+}
 
 @media (min-width: 641px) {
   .gem-c-govspeak ol,.gem-c-govspeak ul,.gem-c-govspeak p {
