start of moving content into json

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,18 +1,27 @@
 {% extends "layout.html" %}
 
-{% block pageTitle %}
-  GOV.UK Manual
-{% endblock %}
-
 {% block content %}
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">User Centred Funding Rules Prototype</h1>
-    <h3 class="govuk-heading-m">Versions</h3>
+    <h1 class="govuk-heading-l">User Centred Funding Rules</h1>
+    <h3 class="govuk-heading-m">Prototype versions</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/prototypes/round-2/index">v 2-0 - Employer Funding Rules</a> (user tested: date?)</li>
-      <li><a href="/prototypes/round-1/index">v 1-0 - Employer Funding Rules</a> (user tested: date?)</li>
+      <li><a href="/3-0/index">3-0 - Providers Funding Rules</a>
+        <ul class="govuk-list govuk-list--bullet govuk-body-s">
+          <li>original content</li>
+        </ul>
+      </li>
+      <li><a href="/prototypes/round-2/index">2-0 - Employer Funding Rules</a> (tested: date?)
+        <ul class="govuk-list govuk-list--bullet govuk-body-s">
+          <li>added search results page</li>
+        </ul>
+      </li>
+      <li><a href="/prototypes/round-1/index">1-0 - Employer Funding Rules</a> (tested: 22-29/10/2018)
+        <ul class="govuk-list govuk-list--bullet govuk-body-s">
+          <li>original content tweaked</li>
+        </ul>
+      </li>
     </ul>
   </div>
 </div>
