--- a/app/views/index.html
+++ b/app/views/index.html
@@ -6,10 +6,17 @@
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">User Centred Funding Rules</h1>
     <h3 class="govuk-heading-m">Prototype versions</h3>
+
+
+    
     <ul class="govuk-list govuk-list--bullet">
-      <li><a href="/3-0/index">3-0 - Providers Funding Rules</a>
-        <ul class="govuk-list govuk-list--bullet govuk-body-s">
-          <li>original content</li>
+      <li>3-0</a>
+        <ul class="govuk-list govuk-list--bullet">
+          <li><a href="/3-0/index">Provider rules - original content</a></li>
+          <li>
+            <a href="/3-0/provider-manual">Provider rules - original content - manual</a>
+            <!-- TODO add list of all pages here -->
+          </li>
         </ul>
       </li>
       <li><a href="/prototypes/round-2/index">2-0 - Employer Funding Rules</a> (tested: date?)
