put in missing manual css. images local. added some print css

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -14,6 +14,10 @@ $govuk-global-styles: true;
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
+// TODO import generic gov styles here
+@import 'manual-frontend/manual-application';
+@import 'manual-frontend/manual-application-print';
+
 .gem-c-feedback__grid-row:after,.gem-c-breadcrumbs ol:after,.gem-c-feedback__prompt:after,.gem-c-govspeak .attachment:after,.gem-c-govspeak .contact:after,.gem-c-image-card:after,.gem-c-metadata:after,.gem-c-translation-nav__list:after,.manuals-frontend-body header:after,.manuals-frontend-body .subsection-collection .js-title-controls-wrap:after {
   content: "";
   display: block;
@@ -241,375 +245,6 @@ h1,h2,h3,h4,h5,h6,p,blockquote,pre,small,strike,sub,sup,tt,var,b,u,i,center,inpu
   }
 }
 
-
-main {
-  display: block
-}
-
-.manuals-frontend-body {
-  padding-bottom: 30px
-}
-
-.manuals-frontend-body header {
-  background: #005ea5;
-  padding: 30px;
-  color: #fff;
-  margin: 0;
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 14px;
-  line-height: 1.1428571429
-}
-
-
-@media (min-width: 641px) {
-  .manuals-frontend-body header {
-      font-size:16px;
-      line-height: 1.25
-  }
-}
-
-
-@media (min-width: 641px) {
-  .manuals-frontend-body header .primary,.manuals-frontend-body header .secondary {
-      float:left
-  }
-
-  .manuals-frontend-body header .primary {
-      width: 66.6666666667%
-  }
-
-  .manuals-frontend-body header .secondary {
-      width: 33.3333333333%
-  }
-
-  .manuals-frontend-body header .secondary .secondary-inner {
-      padding-left: 30px
-  }
-}
-
-
-.manuals-frontend-body header h1 {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 24px;
-  line-height: 1.0416666667;
-  font-weight: bold;
-  padding: 0 0 15px 0
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body header h1 {
-      font-size:36px;
-      line-height: 1.1111111111
-  }
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body header h1 {
-      padding:0 0 30px 0
-  }
-}
-
-.manuals-frontend-body header a {
-  color: #fff
-}
-.manuals-frontend-body header .in-manual-search {
-  position: relative;
-  margin: 30px 0 15px
-}
-
-.manuals-frontend-body header .in-manual-search label {
-  padding-bottom: 5px;
-  display: inline-block
-}
-
-.manuals-frontend-body header .in-manual-search .in-manual-search-box {
-  width: 86%;
-  width: calc(100% - 47px);
-  border: none;
-  padding: 7px;
-  height: 20px
-}
-
-
-.manuals-frontend-body header .in-manual-search button {
-  width: 34px;
-  height: 34px;
-  border: 1px solid #0b0c0c;
-  border-width: 0 0 0 1px;
-  border-left-color: #222;
-  overflow: hidden;
-  text-indent: -5000px;
-  cursor: pointer;
-  color: #fff;
-  background: #0b0c0c url(https://assets.publishing.service.gov.uk/manuals-frontend/search-button-085aa82ff641b5cfb3eb090c888459f96be271efe9c1d98a73c8a181202d9063.png) no-repeat 0 50%;
-  position: absolute;
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0
-}
-
-
-.manuals-frontend-body .breadcrumb-trail {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  margin: 10px 0 0 0;
-  padding: 0 0 10px;
-  border-bottom: 1px solid #bfc1c3
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .breadcrumb-trail {
-      font-size:16px;
-      line-height: 1.25
-  }
-}
-
-
-.manuals-frontend-body .breadcrumb-trail li {
-  background-image: url(https://assets.publishing.service.gov.uk/manuals-frontend/separator-871ef28abf1920b1b8050934ebec4366c18e3cba6ddb704392935e076a7e744d.png);
-  background-position: 100% 20%;
-  background-repeat: no-repeat;
-  display: inline;
-  list-style: none;
-  margin-left: 0;
-  margin-right: 5px;
-  padding: 0 15px 0 0
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .breadcrumb-trail li {
-      background-position:100% 45%
-  }
-}
-
-
-.manuals-frontend-body .breadcrumb-trail li:first-child {
-  margin-left: 0
-}
-
-.manuals-frontend-body .breadcrumb-trail li.last-child {
-  background-image: none;
-  color: #0b0c0c
-}
-
-
-.manuals-frontend-body .breadcrumb-trail li a {
-  color: #0b0c0c
-}
-
-
-.manuals-frontend-body .manual-body {
-  margin: 15px 0 90px
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body {
-      margin-top:30px
-  }
-}
-
-.manuals-frontend-body .manual-body .section-title {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 18px;
-  line-height: 1.2;
-  display: block;
-  padding-top: 9px;
-  padding-bottom: 6px;
-  font-weight: bold
-}
-
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body .section-title {
-      font-size:24px;
-      line-height: 1.25
-  }
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body .section-title {
-      padding-top:6px;
-      padding-bottom: 4px
-  }
-}
-
-.manuals-frontend-body .manual-body .summary {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 18px;
-  line-height: 1.2;
-  margin-bottom: 15px
-}
-
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body .summary {
-      font-size:24px;
-      line-height: 1.25
-  }
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body .summary {
-      max-width:66.6666666667%;
-      margin-bottom: 30px
-  }
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body .body-content-wrapper {
-      width:66.6666666667%
-  }
-}
-
-
-.manuals-frontend-body .collapsible-subsections .js-subsection-title {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 700;
-  text-transform: none;
-  font-size: 16px;
-  line-height: 1.25;
-  display: block;
-  border-top: 1px solid #bfc1c3;
-  padding: 10px 30px 10px 0;
-  margin: 30px 0;
-  position: relative
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .collapsible-subsections .js-subsection-title {
-      font-size:19px;
-      line-height: 1.3157894737
-  }
-}
-
-
-.manuals-frontend-body .collapsible-subsections .js-subsection-title a {
-  text-decoration: none
-}
-
-.manuals-frontend-body .subsection-collection {
-  margin-top: 15px
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .subsection-collection {
-      margin-top:30px
-  }
-}
-
-
-.manuals-frontend-body .subsection-collection .js-title-controls-wrap .js-collection-controls {
-  display: block;
-  margin-left: -5px;
-  margin-bottom: 15px
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .subsection-collection .js-title-controls-wrap .js-collection-controls {
-      margin:0 0 30px -5px;
-      float: right;
-      display: inline-block
-  }
-}
-
-.manuals-frontend-body .subsection-collection .js-title-controls-wrap .js-collection-controls a {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 14px;
-  line-height: 1.1428571429;
-  padding: 0 5px 0 5px;
-  display: inline-block
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .subsection-collection .js-title-controls-wrap .js-collection-controls a {
-      font-size:16px;
-      line-height: 1.25
-  }
-}
-
-.manuals-frontend-body .subsection-collection .js-title-controls-wrap .js-collection-controls a.disabled {
-  color: #6f777b;
-  text-decoration: none;
-  cursor: default
-}
-
-.manuals-frontend-body .js-openable {
-  border-top: 1px solid #bfc1c3;
-  padding-bottom: 30px
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .js-openable {
-      padding-bottom:60px
-  }
-}
-
-.manuals-frontend-body .js-openable .js-subsection-title {
-  cursor: pointer;
-  margin: 0;
-  border: none
-}
-
-.manuals-frontend-body .js-openable .js-subsection-title .js-toggle {
-  height: 25px;
-  width: 25px;
-  display: block;
-  background: url(https://assets.publishing.service.gov.uk/manuals-frontend/arrows_sprite-22a9b88c738b2052e81ad3376ef8bb73bc3fc21fb2eb3182dd82b83c1c84bf4c.png) no-repeat;
-  position: absolute;
-  right: 0;
-  top: 10px
-}
-
-
-.manuals-frontend-body .js-openable .js-subsection-body {
-  margin-top: 15px
-}
-
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .js-openable .js-subsection-body {
-      margin-top:30px
-  }
-}
-
-.js-enabled .manuals-frontend-body .js-openable.closed {
-  padding: 0
-}
-
-.js-enabled .manuals-frontend-body .js-openable.closed .js-toggle {
-  background: url(https://assets.publishing.service.gov.uk/manuals-frontend/arrows_sprite-22a9b88c738b2052e81ad3376ef8bb73bc3fc21fb2eb3182dd82b83c1c84bf4c.png) no-repeat 0 -32px
-}
-
-
-.js-enabled .manuals-frontend-body .js-openable.closed .js-subsection-body {
-  position: absolute;
-  left: -9999px;
-  width: 100px;
-  height: 1px;
-  overflow: hidden
-}
-
-.manuals-frontend-body .print-page {
-  display: none
-}
-
-.js-enabled .manuals-frontend-body .print-page {
-  display: block
-}
-
 .gem-c-govspeak .info-notice {
   border-left: 1em solid #dee0e2;
   padding: 1em 0 1em 1em;
@@ -620,79 +255,11 @@ main {
   margin-bottom: 0;
 }
 
-.manuals-frontend-body .section-list {
-  margin-top: 30px;
-}
 
-@media (min-width: 641px) {
-  .manuals-frontend-body .section-list {
-      margin-top: 60px;
-  }
-}
 
-.manuals-frontend-body .section-list li {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 16px;
-  line-height: 1.25;
-  list-style: none;
-  cursor: pointer;
-  border-top: 1px solid #bfc1c3;
-}
+// MANUAL-FRONT-BODY goes here
 
-@media (min-width: 641px) {
-  .manuals-frontend-body .section-list li {
-      font-size: 19px;
-      line-height: 1.3157894737;
-  }
-}
 
-.manuals-frontend-body .section-list li:last-child {
-  border-bottom: 1px solid #bfc1c3;
-}
-
-.manuals-frontend-body .section-list li a {
-  text-decoration: none;
-  display: block;
-  padding: 10px 10px 10px 0;
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .section-list li a {
-      padding-right: 33.3333333333%;
-  }
-}
-
-.manuals-frontend-body .section-list li a .subsection-title-text {
-  color: #005ea5;
-  font-weight: bold;
-  display: block;
-}
-
-.manuals-frontend-body .section-list li a .subsection-summary {
-  color: #0b0c0c;
-  display: block;
-}
-
-.manuals-frontend-body .manual-body {
-  margin: 15px 0 90px;
-}
-
-@media (min-width: 641px) {
-  .manuals-frontend-body .manual-body {
-      margin-top: 30px;
-  }
-}
-
-.manuals-frontend-body .manual-body .summary {
-  font-family: "nta", Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 18px;
-  line-height: 1.2;
-  margin-bottom: 15px;
-}
 
 /** Search results **/
 .gem-c-feedback__grid-row:after,#finder-frontend header:after,#finder-frontend .filtering:after,.gem-c-breadcrumbs ol:after,.gem-c-feedback__prompt:after,.gem-c-govspeak .attachment:after,.gem-c-govspeak .contact:after,.gem-c-image-card:after,.gem-c-metadata:after,.gem-c-translation-nav__list:after,.search #results:after {
