removed lorem ipsum and description labels from version 1

--- a/app/views/prototypes/round-1/index.html
+++ b/app/views/prototypes/round-1/index.html
@@ -75,74 +75,73 @@
           <p>Guidance for all employers participating in the new apprenticeship programme from 1 August 2018</p>
         </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus debitis rem dolores harum laboriosam! Nesciunt dolorum saepe nam, a quis illo, obcaecati voluptatibus repellat quibusdam nihil dolor. At, blanditiis eveniet.</p>
       </div>
 
       <ol class="section-list">
         <li>
           <a class="" href="guidance/introduction">
             <span class="subsection-title-text">Introduction and purpose of the document</span>
-            <span class="subsection-summary">Introduction and purpose of the document description...</span>
+            <span class="subsection-summary">Introduction and purpose of the document.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/things-to-check">
             <span class="subsection-title-text">Employers and apprenticeships: things to check</span>
-            <span class="subsection-summary">Employers and apprenticeships: things to check description...</span>
+            <span class="subsection-summary">Employers and apprenticeships: things to check.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/what-is-an-apprenticeship">
             <span class="subsection-title-text">What is an apprenticeship?</span>
-            <span class="subsection-summary">What is an apprenticeship? description...</span>
+            <span class="subsection-summary">What is an apprenticeship?</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/who-can-be-funded">
             <span class="subsection-title-text">Who can be funded? </span>
-            <span class="subsection-summary">Who can be funded? description...</span>
+            <span class="subsection-summary">Who can be funded?</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/individuals">
             <span class="subsection-title-text">Individuals who are not eligible for funding</span>
-            <span class="subsection-summary">Individuals who are not eligible for funding description...</span>
+            <span class="subsection-summary">Individuals who are not eligible for funding.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/what-can-be-funded">
             <span class="subsection-title-text">What can be funded?</span>
-            <span class="subsection-summary">What can be funded? description...</span>
+            <span class="subsection-summary">What can be funded?</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/ineligible-costs">
             <span class="subsection-title-text">Inelegible costs </span>
-            <span class="subsection-summary">Inelegible costs description...</span>
+            <span class="subsection-summary">Inelegible costs.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/contracting">
             <span class="subsection-title-text">Contracting and subcontracting</span>
-            <span class="subsection-summary">Contracting and subcontracting description...</span>
+            <span class="subsection-summary">Contracting and subcontracting.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/paying-for">
             <span class="subsection-title-text">Paying for an apprenticeship</span>
-            <span class="subsection-summary">Paying for an apprenticeship description...</span>
+            <span class="subsection-summary">Paying for an apprenticeship.</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/eligibility">
             <span class="subsection-title-text">Eligibility criteria (who we fund)</span>
-            <span class="subsection-summary">Eligibility criteria (who we fund) description...</span>
+            <span class="subsection-summary">Eligibility criteria (who we fund).</span>
           </a>
         </li>
         <li>
           <a class="" href="guidance/glossary">
             <span class="subsection-title-text">Glossary</span>
-            <span class="subsection-summary">Glossary description...</span>
+            <span class="subsection-summary">Glossary.</span>
           </a>
         </li>
       </ol>
